# undetected-chromedriver

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: workflow.yml
example/: example.py  test_workflow.py
undetected_chromedriver/: devtool.py  patcher.py
